--- a/package.json
+++ b/package.json
@@ -21,18 +21,24 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "^1.2.4",
-    "@builder.io/qwik-city": "^1.2.4",
+    "@builder.io/qwik": "^1.1.5",
+    "@builder.io/qwik-city": "^1.1.5",
     "@types/eslint": "8.40.2",
     "@types/node": "^20.3.3",
     "@typescript-eslint/eslint-plugin": "5.60.1",
     "@typescript-eslint/parser": "5.60.1",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.44.0",
-    "eslint-plugin-qwik": "^1.2.4",
+    "eslint-plugin-qwik": "^1.1.5",
+    "postcss": "^8.4.23",
     "prettier": "2.8.8",
+    "tailwindcss": "^3.3.1",
     "typescript": "5.1.6",
     "undici": "5.22.1",
     "vite": "4.3.9",
     "vite-tsconfig-paths": "4.2.0"
+  },
+  "dependencies": {
+    "@floating-ui/dom": "^1.4.3"
   }
 }
