--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vite-tsconfig-paths": "4.2.0"
   },
   "dependencies": {
-    "@floating-ui/dom": "^1.4.3"
+    "@floating-ui/dom": "^1.4.3",
+    "@fontsource/poppins": "^5.0.3"
   }
 }
